--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
       overflow-x: hidden;
     }
     video.bg-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  pointer-events: none;
+}
     #logo {
       position: absolute;
       top: 30px;
