--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       border-radius: 6px;
       font-size: 14px;
       cursor: pointer;
+       position: relative;
+  z-index: 1;
+}
     }
     #chatbox {
       width: 90%;
