--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       border: 1px solid #ccc;
       padding: 6px 12px; border-radius: 6px;
       font-size: 14px; cursor: pointer;
+       position: relative;
+      z-index: 1;
     }
 
     #chatbox {
