--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
 </div>
 
 <div class="quick-options" id="quick-options"></div>
+  
+<!-- 🔄 語氣選擇選單 -->
+<div id="mood-selector" style="text-align:center; margin: 10px 0; z-index:2; position:relative;">
+  <label for="mood" style="color: #ccc; margin-right: 10px;">語氣風格：</label>
+  <select id="mood" style="padding: 6px 12px; border-radius: 6px; font-size: 14px;">
+    <option value="auto">自動判斷（依內容切換）</option>
+    <option value="靜心海霧">靜心海霧（極簡留白）</option>
+    <option value="詩意靜默">詩意靜默（潮汐詩感）</option>
+    <option value="真實共鳴">真實共鳴（像朋友一樣）</option>
+    <option value="靈性導引">靈性導引（穩定引導）</option>
+  </select>
+</div>
 
 <div id="chatbox"> 
   <div id="messages"></div>
